--- a/src/assets/scss/Home/home.scss
+++ b/src/assets/scss/Home/home.scss
@@ -1,12 +1,12 @@
 .home{
-    margin: 0 auto 0 auto;
+    margin: 0;
     background: #F5A02A;
-    width: 65%;
+    width: 100%;
     height: 100%;
     
 }
 
 .home_picture{
-height:80%;
-width:80%;
+    height:80%;
+    width:80%;
 }
