--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -1,12 +1,61 @@
+
 .footer{
     background:#9E261B;
-    height:20vh;
+    height:80vh;
     width: 100%;
     align-items: center;
-    justify-content: center;
-}
-.footer_text{
-  text-align: center;
-  font-size: 20px;
-  margin: 40px;
+    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+
+    .decoration{
+      width: 0;
+      height: 0;
+      border: 25px solid;
+      border-color: #F5A02A transparent transparent transparent;
+    }
+    
+    #contact{
+      height: 70vh;
+      width: 100%;
+      display: flex;
+      .logo{
+        width:20vw;
+        height:25vh;
+        margin-right: 50px;
+      }
+      .mapBox{
+          position: relative;
+          width: 25vw;
+          height: 50vh;
+          background: #fff;
+          iframe{
+              width: 100%;
+              height: 100%;
+          }
+      }
+      .contact-box{
+          padding: 50px;
+          padding-top: 0;
+          display: inline;
+          .decoration4{
+              height: 1vmin;
+              width:5vw;
+              background-color: #ffffff;
+              margin-bottom: 10px;
+          }
+          h1{
+              font-weight: bolder;
+              margin-bottom: 20px;
+              color:#F7E3B1;
+          }
+          p{
+            color:#F7E3B1;
+          }
+          i{
+            color:#F7E3B1;
+          }
+      }
+      
+    }
 }
