--- a/src/assets/scss/Home/about.scss
+++ b/src/assets/scss/Home/about.scss
@@ -13,7 +13,7 @@
             background-color: #AF3314;
             border-bottom-right-radius: 20px;
             // overflow: visible;
-            h{  
+            h1{  
                 font-size: 5.5vmin;
                 font-weight: bolder;
                 color:aliceblue;
