--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -1,19 +1,19 @@
+@import "@/assets/scss/Home/home.scss";
+
 .home{
     #merchandise{
         height: 55vh;
         width: 100%;
-        display: inline-block;
-        justify-content: space-around;
-        align-items: baseline;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         margin-top: 50px;
-        .content-title{
-            width: 100%;
-            height: 15vmin;
-        }
+
         .cardwrapper{
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             align-items: center;
+            
             .card{
                 width: 15vw;
                 height:25vh;
@@ -24,6 +24,7 @@
                 align-items: center;
                 box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
                 transform: 0.5s ease-in-out;
+                margin: auto 50px;
                 &:hover{
                     transform: translateY(20px);
                 }
