--- a/src/assets/scss/Home/time.scss
+++ b/src/assets/scss/Home/time.scss
@@ -1,35 +1,62 @@
 
     #time{
         width:100%;
-        height:55vh;
-        background: linear-gradient(rgba(0, 0, 0, .7), rgba(79, 76, 76, 0.5), rgba(248, 175, 175, 0.5)) ,url("../assets/picture/store.jpg");
+        height:72vh;
+        background: linear-gradient(rgba(0, 0, 0, .7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8)) ,url("../assets/picture/store.jpg");
         background-position: center;
         background-size: cover;
         z-index: max;
-        img{
-            display: inline;
-            height: 30vh;
-            width: 30vw;
-            margin-left: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .store-name{
+            font-weight: bolder;
+            font-size: 4vmin;
+            display: flex;
+            justify-content: center;
+            color: rgb(240, 241, 156);
+            justify-content: center;
+            margin-top: 50px;
+        }
+        .store-subname{
+            font-weight: bolder;
+            font-size: 2.5vmin;
+            display: flex;
+            justify-content: center;
+            color: rgb(240, 241, 156);
+            justify-content: center;
+            margin-bottom: 20px;
         }
         .timetable{
             display: inline-block;
-            background: rgba(247,227,177,0.8);
             padding: 20px;
-            margin: 100px;
-            padding-right:100px;
-            margin-left: 200px;
-            p{
+            transition: .5s;
+            &:hover{
+                background: rgba(247,227,177,0.4);
+            }
+            .timetable-subtitle{
                 font-weight: bolder;
                 font-size: 3vmin;
-                margin-left: 20px;
-                margin-bottom: 5px;
+                display: flex;
+                color: azure;
+                justify-content: center;
+                margin-bottom: 20px;
             }
-            li{
-                list-style: none;
-                font-size: 2.5vmin;
-                margin-bottom: 5px;
-                color:#AF3314;
-            }
+            ul{
+                padding: 0;
+                li{
+                    list-style: none;
+                    display: flex;
+                    justify-content: center;
+                    font-size: 2.5vmin;
+                    margin-bottom: 5px;
+                    color:azure;
+                    p{
+                        font-family:'Secular One';
+                        color:azure;
+                    }
+                }
+            } 
         }
     }
