--- a/src/assets/scss/navbar.scss
+++ b/src/assets/scss/navbar.scss
@@ -4,23 +4,22 @@ header{
     top: 0;
     width:100%;
     height:80px;
-    padding:10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background: rgba(238,119,72,0);
     z-index: 10;
     transition: .7s;
 
-      .logo{
-        color:rgb(255, 255, 255);
-        font-weight: 700;
-        text-decoration: none;
-        font-size:2em;
-        text-transform: uppercase;
-        background: none;
-        margin-right: 200px;
-      }
+      // .logo{
+      //   color:rgb(255, 255, 255);
+      //   font-weight: 700;
+      //   text-decoration: none;
+      //   font-size:2em;
+      //   text-transform: uppercase;
+      //   background: none;
+      //   margin-right: 200px;
+      // }
       ul{
         display: flex;
         justify-content: center;
@@ -58,7 +57,7 @@ header{
 .scrolled-nav{
   background: #9E261B;
   box-shadow: 0 4px 10px -1px rgba(0,0,0,0.05), 0 2px 10px -1px rgba(0,0,0,0.06);
-  height: 50px;
+  height: 70px;
   .logo{
     color:#F7E3B1;
   }
