--- a/src/assets/scss/navbar.scss
+++ b/src/assets/scss/navbar.scss
@@ -57,11 +57,15 @@ header{
 .scrolled-nav{
   background: #9E261B;
   box-shadow: 0 4px 10px -1px rgba(0,0,0,0.05), 0 2px 10px -1px rgba(0,0,0,0.06);
-  height: 70px;
+  height: 65px;
   .logo{
     color:#F7E3B1;
   }
-  ul li a:hover{
-    background-color: #f70a0a;
+  ul li a{
+    height: 40px;
+    line-height: 40px;
+    &:hover{
+      background-color: #f70a0a;
+    }
   }
 }
