--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -16,7 +16,7 @@
       width: 0;
       height: 0;
       border: 25px solid;
-      border-color: #F5A02A transparent transparent transparent;
+      border-color: #FDF2D8 transparent transparent transparent;
     }
     
     #contact{
