--- a/src/assets/scss/Home/about.scss
+++ b/src/assets/scss/Home/about.scss
@@ -10,16 +10,27 @@
     box-sizing: border-box;
     margin-bottom: 100px;
     background-color: #AF3314;
+    h1{
+        font-size: 3rem;
+        color: antiquewhite;
+    }
+    p{
+        font-size: 2.2rem;
+        margin-top: 20px;
+        color: antiquewhite;
+    }
+}
+@media screen and (max-width:950px) {
+    #about{
+        height: 30vh;
         h1{
-            font-size: 3rem;
-            color: antiquewhite;
+            font-size: 2rem;
         }
         p{
-            font-size: 2.2rem;
-            margin-top: 20px;
-            color: antiquewhite;
+            font-size: 2rem;
         }
     }
+}
 
 .about-enter-active{
     transition: 1.5s ease all;
