--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    @media screen and (max-width:1000px) {
-        height: 120vh;
+    @media screen and (max-width:850px) {
+        height: 45vh;
     }
 
     .wrapper{
@@ -18,8 +18,8 @@
             display: flex;
             flex-wrap: wrap;
             .image{
-                padding: 7px 2px;
-                width: calc(100% / 4);
+                padding: 30px 10px;
+                width: calc(100% / 5);
                 @media screen and (max-width:800px) {
                     width:calc(100%/2.8);
                 }
@@ -27,7 +27,9 @@
                     display: flex;
                     width: 100%;
                     height: auto;
+                    border-radius: 15px;
                     overflow: hidden;
+
                 }
                 img{
                     max-width: 200px;
@@ -35,6 +37,7 @@
                     object-fit: cover;
                     vertical-align: middle;
                     transition: all 0.3s ease;
+                    
                 }
                 &:hover img{
                     transform: scale(1.1);
