--- a/src/assets/scss/Home/home.scss
+++ b/src/assets/scss/Home/home.scss
@@ -8,7 +8,7 @@ html{
 
 .home{
     margin: 0;
-    background: #F5A02A;
+    background: #FDF2D8;
     width: 100%;
     height: 100%;
     
@@ -34,9 +34,10 @@ html{
     .content-title{
         font-weight: bolder;
         font-size: 2rem;
-        color:aliceblue
+        color:#F5A02A;
     }
 }
+    
 
 .content-description{
     margin-bottom: 80px;
