--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -8,31 +8,39 @@
         flex-direction: column;
         justify-content: center;
         margin-top: 50px;
-        @media screen and (max-width:915px) {
-            height:130vh;
+        @media screen and (max-width:950px) {
+            height:100vh;
         }
 
         .cardwrapper{
             display: flex;
             justify-content: center;
             align-items: center;
-            @media screen and (max-width:915px) {
+            @media screen and (max-width:950px) {
                 display:block;
             }
+           
             
             .card{
                 max-width: 100%;
                 height: auto;
-                padding: 4rem 4rem;
+                padding: 6rem 6rem;
                 background: #F5A02A;
                 position: relative;
                 display: flex;
+                flex-direction: column;
                 align-items: center;
                 box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
                 transform: 0.5s ease-in-out;
                 margin: auto 50px;
-                @media screen and (max-width:915px) {
+                @media screen and (max-width:950px) {
+                    width: 100px;
+                    height: 50px;
+                    padding: 0;
                     margin-bottom: 50px;
+                }
+                @media screen and (max-width:1200px) {
+                    padding: 4rem 4rem;
                 }
                 
                 &:hover{
@@ -46,7 +54,7 @@
                     display: block;
                     width:100%;
                     height:100%;
-                    background: linear-gradient(to bottom, rgba(0,176,155,.5), rgba(150,201,61,1));
+                    background: linear-gradient(to bottom, rgba(245,160,42,.5), rgba(254,219,142,1));
                     z-index: 2;
                     transition: .5s all;
                     opacity: 0;
@@ -72,17 +80,33 @@
                     transition: .5s all;
                     h1{
                         margin: 0;
+                        @media screen and (max-width:950px) {
+                            width: 150px;
+                        }
                     }
                     p{
                         letter-spacing: 1px;
                         font-size: 15px;
                         margin-top: 8px;
                         margin-bottom: 20px;
+                        
                     }
                 }
                 &:hover .info{
                     opacity: 1;
                     transform: translateY(0px);
+                }
+                .description{
+                    position: relative;
+                    background-color: #F5A02A;
+                    padding: 1rem 2rem 1rem 2rem;
+                    display: flex;
+                    justify-content: center;
+                    top:180px;
+                    font-size: 1.5rem;
+                    z-index: 2;
+                    border-radius: 5px;
+                    border:#000000;
                 }
             }
         }
