--- a/src/assets/scss/navbar.scss
+++ b/src/assets/scss/navbar.scss
@@ -8,7 +8,6 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(238,119,72,0);
     z-index: 10;
     transition: .7s;
 
@@ -47,6 +46,10 @@ header{
                   color:aliceblue;
                   background-color: #ee7748;
               }
+
+              i{
+                color: rgb(255, 255, 255);
+              }
             }
           a.router-link-exact-active{
               color:aliceblue;
@@ -54,63 +57,12 @@ header{
           }
         }
       } 
-      .navbar_icon{
-        display: flex;
-        position: absolute;
-        top:7px;
-        right:24px;
-        height:75%;
-        
-        i{
-            cursor:pointer;
-            font-size: 31.35px;
-            transition: 0.8s ease all;
-        }
-      }
-
-      .icon-active{
-          transform: rotate(180deg);
-      }
-
-   
-
-    .dropdown-nav{
-        display:flex;
-        flex-direction:column;
-        position: fixed;
-        height: 100%;
-        width:100%;
-        max-width: 150px;
-        background: #fff;
-        top:0;
-        left:0;
-
-        li{
-            margin-left: 0;
-            .link{
-                color:black;
-            }   
-        }
-      }
-      .mobile-nav-enter-active,
-      .mobile-nav-leave-active{
-          transition: 1s ease all;
-      }
-
-      .mobile-nav-enter-from,
-      .mobile-nav-leave-to{
-          transform: translateX(-400px);
-      }
-
-      .mobile-nav-enter-to{
-          transform: translateX(0px);
-      }
   }
 
 .scrolled-nav{
   background: #9E261B;
-  box-shadow: 0 4px 10px -1px rgba(0,0,0,0.05), 0 2px 10px -1px rgba(0,0,0,0.06);
   height: 65px;
+
   .logo{
     color:#F7E3B1;
   }
