--- a/src/assets/scss/Home/about.scss
+++ b/src/assets/scss/Home/about.scss
@@ -23,6 +23,7 @@
 @media screen and (max-width:950px) {
     #about{
         height: 30vh;
+        margin-bottom: 0px;
         h1{
             font-size: 2rem;
         }
