--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -8,7 +8,7 @@
         flex-direction: column;
         justify-content: center;
         margin-top: 10px;
-        @media screen and (max-width:950px) {
+        @media screen and (max-width:$screen-md) {
             height:130vh;
         }
 
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            @media screen and (max-width:950px) {
+            @media screen and (max-width:$screen-md) {
                 display:block;
             }
            
@@ -33,13 +33,13 @@
                 box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
                 transform: 0.5s ease-in-out;
                 margin: auto 50px;
-                @media screen and (max-width:950px) {
+                @media screen and (max-width:$screen-md) {
                     width: 100px;
                     height: 50px;
                     padding: 0;
                     margin-bottom: 50px;
                 }
-                @media screen and (max-width:1200px) {
+                @media screen and (max-width:$screen-lg) {
                     padding: 4rem 4rem;
                 }
                 
@@ -80,7 +80,7 @@
                     transition: .5s all;
                     h1{
                         margin: 0;
-                        @media screen and (max-width:950px) {
+                        @media screen and (max-width:$screen-md) {
                             width: 150px;
                         }
                     }
