--- a/src/assets/scss/Home/time.scss
+++ b/src/assets/scss/Home/time.scss
@@ -16,7 +16,7 @@
             font-size: 2rem;
             display: flex;
             justify-content: center;
-            color: rgb(240, 241, 156);
+            color: $yellow;
             justify-content: center;
             margin-top: 50px;
         }
@@ -25,7 +25,7 @@
             font-size: 1rem;
             display: flex;
             justify-content: center;
-            color: rgb(240, 241, 156);
+            color: $yellow;
             justify-content: center;
             margin-bottom: 20px;
         }
@@ -40,7 +40,7 @@
                 font-weight: bolder;
                 font-size: 1.8rem;
                 display: flex;
-                color: azure;
+                color: $white;
                 justify-content: center;
                 margin-bottom: 20px;
             }
@@ -52,13 +52,13 @@
                     justify-content: center;
                     font-size: 1.2rem;
                     margin-bottom: 5px;
-                    color:azure;
-                    @media screen and (max-width:800px) {
+                    color:$white;
+                    @media screen and (max-width:$screen-sm) {
                         font-size: 1rem;
                     }
                     p{
                         font-family:'Secular One';
-                        color:azure;
+                        color:$white;
                     }
                 }
             } 
