--- a/src/assets/scss/Home/news.scss
+++ b/src/assets/scss/Home/news.scss
@@ -1,6 +1,6 @@
 @import "@/assets/scss/Home/home.scss";
 
-#about{
+#news{
     position: relative;
     height:44vh;
     width: 100%;
@@ -9,28 +9,26 @@
     flex-direction: column;
     box-sizing: border-box;
     margin-bottom: 30px;
-    .title{
-        font-size: 2rem;
-        color: $brown;
+    background-color: $brown;
+    h1{
+        font-size: 3rem;
+        color: $white;
     }
-    .content{
-        width: 60%;
-        text-align: center;
-        font-size: 1.2rem;
+    p{
+        font-size: 2.2rem;
         margin-top: 20px;
-        color: $brown;
+        color: $white;
     }
 }
 @media screen and (max-width:$screen-md) {
-    #about{
-        height: 50vh;
+    #news{
+        height: 30vh;
         margin-bottom: 0px;
-        .title{
+        h1{
             font-size: 2rem;
         }
-        .content{
-            width: 80%;
-            font-size: 1.1rem;
+        p{
+            font-size: 2rem;
         }
     }
 }
