--- a/src/assets/scss/Home/home.scss
+++ b/src/assets/scss/Home/home.scss
@@ -86,3 +86,45 @@ html{
     }
 }
 
+.socialMedia{
+    margin-top: -60px;
+    right:280px;
+    float: right;
+    position: relative;
+    cursor: pointer;
+    opacity: 1;
+    z-index: 10000;
+    width: 60px;
+    height: 60px;
+    
+}
+.socialMedia2{
+    margin-top: -60px;
+    right:180px;
+    float: right;
+    position: relative;
+    cursor: pointer;
+    opacity: 1;
+    z-index: 10000;
+    width: 60px;
+    height: 60px;
+}
+.socialMedia3{
+    margin-top: -60px;
+    right:80px;
+    float: right;
+    position: relative;
+    cursor: pointer;
+    opacity: 1;
+    z-index: 10000;
+    width: 60px;
+    height: 60px;
+}
+.icon{ 
+    color:$white;
+    font-size: 4rem;
+    &:hover{
+        color: pink;
+        transition: .5s all;
+    }
+}
