--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -77,7 +77,7 @@
           a{
             text-decoration:none;
           } 
-          i{
+          .icon{
             color:#F7E3B1;
             font-size: 2rem;
             display: flex;
