--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     @media screen and (max-width:$screen-sm) {
-        height: 45vh;
+        height: 65vh;
     }
 
     .wrapper{
@@ -103,31 +103,36 @@
 
 :deep .swiper-area{
     width: 100%;
-    height: 60%;
+    height: auto;
     margin-top: 50px;
 
-    .swiper-container{
-        height:100%;
         
-
-        .swiper-wrapper{
-            display: flex;
-            justify-content: flex-start;
-        }
+    .swiper-wrapper{
+        display: flex;
+        justify-content: flex-start;
+    }
+    .swiper-slide {
+        display: flex;
+        align-items: center;
         
-        .swiper-slide {
-            text-align: center;
-            font-size: 18px;
-            background: transparent;
-            display: flex;
-            align-items: center;
+        img{
+            width: 55%;
+            height: auto;
             
-
-            img{
-                width: 50%;
-                height: auto;
-                
-            }
         }
     }
+    .swiper-pagination-bullet {
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+        border-radius: 50%;
+        background: $dark-brown;
+        opacity: 0.6;
+    
+    }
+    .swiper-pagination-bullet-active {
+        opacity: 1;
+        background: $white2;
+    }
 }
+
