--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -1,7 +1,7 @@
-@import "@/assets/scss/Home/home.scss";
+@import "@/assets/scss/Home/index.scss";
 
 #photos{
-    height:100vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -106,7 +106,6 @@
     height: auto;
     margin-top: 50px;
 
-        
     .swiper-wrapper{
         display: flex;
         justify-content: flex-start;
@@ -137,7 +136,6 @@
         border-radius: 50%;
         background: $black;
         opacity: 0.6;
-    
     }
     .swiper-pagination-bullet-active {
         opacity: 1;
