--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -2,12 +2,81 @@
 
 
 #comment{
-    height: 70vh;
+    height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
-    img{
-        height: 300px;
-        width: 300px;
+
+    :deep(.swiper-area){
+        width: 100%;
+        height: auto;
+        margin-top: 50px;
+
+            .comment-card{
+                display: grid;
+                grid-template-columns: repeat(8,30px);
+                grid-template-rows: 30px 90px 30px;
+                grid-gap: 15px 15px;
+                color: $black;
+                background-color: $white;
+                padding: 50px;
+                margin: 20px 0;
+                margin-bottom: 80px;
+                border-radius: 30px;
+                box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
+                &:hover{
+                    box-shadow: 0px 7px 10px rgba(0,0,0,0.4);
+                    transform: translateY(-5px);
+                }
+                .stars{
+                    grid-area: 1/1/1/5;
+                    i{
+                        font-size: 2rem;
+                        color:$yellow;
+                    }
+                }
+                .comment-content{
+                    grid-area:2/1/2/8;
+                }
+                .headicon{
+                    grid-area: 3/1/3/1;
+                    i{
+                        font-size: 2rem;
+                        color:$dark-brown;
+                    }
+                }
+                .name{
+                    grid-area: 3/2/3/8;
+                    color: $orange;
+                    font-weight: bold;
+                    font-size: large;
+                }
+                .record-time{
+                    grid-area:1/5/1/8;
+                    font-size: small;
+                }
+            }
+            
+        .swiper-button-prev{
+            --swiper-navigation-size: 30px;
+            color: $dark-brown;
+        }
+        .swiper-button-next{
+            --swiper-navigation-size: 30px;
+            color: $dark-brown;
+        }
+        .swiper-pagination-bullet {
+            width: 15px;
+            height: 15px;
+            display: inline-block;
+            border-radius: 50%;
+            background: $black;
+            opacity: 0.6;
+        }
+        .swiper-pagination-bullet-active {
+            opacity: 1;
+            background: $light-orange;
+        }
     }
 }
+
