--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -24,13 +24,16 @@
                 margin-bottom: 80px;
                 border-radius: 30px;
                 box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
+                @media screen and (max-width:$screen-sm) {
+                    padding: 25px;
+                }
                 &:hover{
                     box-shadow: 0px 7px 10px rgba(0,0,0,0.4);
                     transform: translateY(-5px);
                 }
                 .stars{
                     grid-area: 1/1/1/5;
-                    i{
+                    .icon{
                         font-size: 2rem;
                         color:$yellow;
                     }
@@ -40,7 +43,7 @@
                 }
                 .headicon{
                     grid-area: 3/1/3/1;
-                    i{
+                    .icon{
                         font-size: 2rem;
                         color:$dark-brown;
                     }
