--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -25,7 +25,7 @@
                 border-radius: 30px;
                 box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
                 @media screen and (max-width:$screen-sm) {
-                    padding: 25px;
+                    padding: 15px;
                 }
                 &:hover{
                     box-shadow: 0px 7px 10px rgba(0,0,0,0.4);
@@ -36,16 +36,25 @@
                     .icon{
                         font-size: 2rem;
                         color:$yellow;
+                        @media screen and (max-width:$screen-sm) {
+                            font-size: 1.8rem;
+                        }
                     }
                 }
                 .comment-content{
                     grid-area:2/1/2/8;
+                    @media screen and (max-width:$screen-sm) {
+                        font-size: 0.9rem;
+                    }
                 }
                 .headicon{
                     grid-area: 3/1/3/1;
                     .icon{
                         font-size: 2rem;
                         color:$dark-brown;
+                        @media screen and (max-width:$screen-sm) {
+                            font-size: 1.8rem;
+                        }
                     }
                 }
                 .name{
