--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -20,15 +20,15 @@
                 color: $black;
                 background-color: $white;
                 padding: 50px;
-                margin: 20px 0;
+                margin: 40px 30px;
                 margin-bottom: 80px;
                 border-radius: 30px;
-                box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
+                box-shadow: 0px 8px 38px rgba(0,0,0,0.1);
                 @media screen and (max-width:$screen-sm) {
                     padding: 15px;
                 }
                 &:hover{
-                    box-shadow: 0px 7px 10px rgba(0,0,0,0.4);
+                    box-shadow: 0px 18px 68px rgba(0,0,0,.2);
                     transform: translateY(-5px);
                 }
                 .stars{
