--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -60,6 +60,7 @@
         z-index: 99;
         transform: translate(-50%, -50%) scale(1);
         transition: all 1s ease;
+        display: none;
         
         .details{
             display: flex;
@@ -85,6 +86,7 @@
             img{
                 max-width: 100%;
                 border-radius: 0 0 3px 3px;
+                
             }
         }   
     }
