--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -2,10 +2,11 @@
 
 
 #comment{
-    height: 80vh;
-    width: 100%;
+    height: auto;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 60px;
 
     :deep(.swiper-area){
         width: 100%;
@@ -23,16 +24,14 @@
                 grid-template-columns: repeat(8,30px);
                 grid-template-rows: 30px 90px 30px;
                 grid-gap: 15px 15px;
+                padding: 50px;
+                margin: 40px 0px;
+                margin-bottom: 80px;
                 color: $black;
                 background-color: $white;
-                padding: 50px;
-                margin: 40px 30px;
-                margin-bottom: 80px;
                 border-radius: 30px;
                 box-shadow: 0px 8px 38px rgba(0,0,0,0.1);
-                @media screen and (max-width:$screen-sm) {
-                    padding: 10px;
-                }
+               
                 &:hover{
                     box-shadow: 0px 18px 68px rgba(0,0,0,.2);
                     transform: translateY(-5px);
@@ -42,25 +41,16 @@
                     .icon{
                         font-size: 2rem;
                         color:$yellow;
-                        @media screen and (max-width:$screen-sm) {
-                            font-size: 1.6rem;
-                        }
                     }
                 }
                 .comment-content{
                     grid-area:2/1/2/8;
-                    @media screen and (max-width:$screen-sm) {
-                        font-size: 0.8rem;
-                    }
                 }
                 .headicon{
                     grid-area: 3/1/3/1;
                     .icon{
                         font-size: 2rem;
                         color:$dark-brown;
-                        @media screen and (max-width:$screen-sm) {
-                            font-size: 1.6rem;
-                        }
                     }
                 }
                 .name{
@@ -99,3 +89,28 @@
     }
 }
 
+@media screen and (max-width:$screen-xs) {
+    #comment{
+        :deep(.swiper-area .swiper-slide .comment-card){
+            grid-template-columns: repeat(8,15px);
+            grid-template-rows: 15px 45px 15px;
+            grid-gap: 20px 20px;
+            padding: 10px;
+            .stars .icon{
+                font-size: 1rem;
+            }
+            .comment-content{
+                font-size: .2rem;
+            }
+            .headicon .icon{
+                font-size: 1rem;
+            }
+            .name{
+                font-size: .2rem;
+            }
+            .record-time{
+                font-size: .2rem;
+            }
+        }
+    }
+}
