--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -1,18 +1,18 @@
 @import "@/assets/scss/Home/index.scss";
 
 #photos{
-    height: 100vh;
-    width: 100%;
+    height: auto;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    @media screen and (max-width:$screen-sm) {
-        height: 65vh;
-    }
+    margin-top: 100px;
+    
 
     .wrapper{
-        margin-top: 50px;
         max-width: 1000px;
+        margin-top: 30px;
+        
 
         .gallery{
             display: flex;
@@ -21,9 +21,7 @@
                 padding: 30px 10px;
                 width: calc(100% / 5);
                 cursor: pointer;
-                @media screen and (max-width:$screen-sm) {
-                    width:calc(100%/2.8);
-                }
+                
                 span{
                     display: flex;
                     width: 100%;
@@ -100,6 +98,12 @@
         z-index: 55;
         display: none;
         background: rgba(0,0,0,0.45);
+    }
+}
+
+@media screen and (max-width:$screen-sm) {
+    #photo .wrapper .gallery .image{
+        width:calc(100%/2.8);
     }
 }
 
