--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -1,141 +1,149 @@
 @import "@/assets/scss/Home/index.scss";
 
-.home{
-    #merchandise{
-        height: 80vh;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-top: 10px;
-        @media screen and (max-width:$screen-md) {
-            height:130vh;
-        }
 
-        .cardwrapper{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            @media screen and (max-width:$screen-md) {
-                display:block;
-            }
-           
-            
-            .card{
-                max-width: 100%;
-                height: auto;
-                padding: 4rem 4rem;
-                background: $light-orange;
-                position: relative;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
-                transform: 0.5s ease-in-out;
-                margin: auto 50px;
-                @media screen and (max-width:$screen-md) {
-                    width: 100px;
-                    height: 50px;
-                    padding: 0;
-                    margin-bottom: 50px;
-                }
-                @media screen and (max-width:$screen-lg) {
-                    padding: 4rem 4rem;
-                }
-                
-                &:hover{
-                    transform: translateY(20px);
-                }
-                &::before{
-                    content:"";
-                    position: absolute;
-                    top:0;
-                    left:0;
-                    display: block;
-                    width:100%;
-                    height:100%;
-                    background: linear-gradient(to bottom, rgba(245,160,42,.5), rgba(254,219,142,1));
-                    z-index: 2;
-                    transition: .5s all;
-                    opacity: 0;
-                }
-                &:hover::before{
-                    opacity:1;
-                }
-    
-                img{
-                    width:100%;
-                    height:100%;
-                    object-fit:cover;
-                    position: absolute;
-                    top:0;
-                    left:0;
-                }
-                .info{
-                    position: relative;
-                    z-index:3;
-                    color:$white;
-                    opacity: 0;
-                    transform: translateY(30px);
-                    transition: .5s all;
-                    h1{
-                        margin: 0;
-                        @media screen and (max-width:$screen-md) {
-                            width: 150px;
-                        }
-                        span{
-                            font-size: 1vmax;
-                            font-weight: bolder;
-                        }
-                    }
-                    p{
-                        letter-spacing: 1px;
-                        font-size: 15px;
-                        margin-top: 8px;
-                        margin-bottom: 20px;
-                        
-                    }
-                }
-                &:hover .info{
-                    opacity: 1;
-                    transform: translateY(0px);
-                }
-            }
-        }
-        .card_mobile{
-            width: 80%;
+#merchandise{
+    height: auto;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 60px;
+
+    .cardwrapper{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        .card{
+            position: relative;
+            max-width: 100%;
             height: auto;
-            margin: 5px 20px;
-            background:$light-orange;
             display: flex;
-            justify-content: flex-start;
-            align-items: flex-start;
-            background-color:$white2;
-            img{
-                max-width: 200px;
-                height: auto;
+            flex-direction: column;
+            align-items: center;
+            margin: auto 50px;
+            padding: 4rem 4rem;
+            background: $light-orange;
+            box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+            transform: 0.5s ease-in-out;
+            
+            
+            &:hover{
+                transform: translateY(20px);
             }
-            .description{
+            &::before{
+                content:"";
+                position: absolute;
+                top:0;
+                left:0;
+                display: block;
+                width:100%;
+                height:100%;
+                background: linear-gradient(to bottom, rgba(245,160,42,.5), rgba(254,219,142,1));
+                z-index: 2;
+                transition: .5s all;
+                opacity: 0;
+            }
+            &:hover::before{
+                opacity:1;
+            }
+
+            img{
+                width:100%;
+                height:100%;
+                object-fit:cover;
+                position: absolute;
+                top:0;
+                left:0;
+            }
+            .info{
                 position: relative;
-                width: 100%;
-                height: auto;
-                display: inline-block;
-                margin: 20px;
-                padding: 7px 2px;
-                .item-name{
-                    font-size: 0.5vmax;
-                    margin: 2px;
+                z-index:3;
+                color:$white;
+                opacity: 0;
+                transform: translateY(30px);
+                transition: .5s all;
+                h1{
+                    margin: 0;
+                    
                     span{
-                        font-size: 3vmax;
-                        padding-bottom: 200px;
+                        font-size: 1vmax;
                         font-weight: bolder;
                     }
                 }
-                .item-content{
-                    margin-top: 5px;
-                    font-size: 1rem;
+                p{
+                    letter-spacing: 1px;
+                    font-size: 15px;
+                    margin-top: 8px;
+                    margin-bottom: 20px;
                 }
             }
-        }    
+            &:hover .info{
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
+    }
+    .card_mobile{
+        width: 80%;
+        height: auto;
+        display: flex;
+        align-items: flex-start;
+        margin: 5px 20px;
+        background:$light-orange;
+        background-color:$white2;
+
+        img{
+            width: 32vw;
+            height: auto;
+        }
+        .description{
+            position: relative;
+            width: 100%;
+            height: auto;
+            text-align: left;
+            
+            
+            .item-content{
+                font-size: 1.2rem;
+                margin: 20px;
+                
+                span{
+                    font-size: 1.8rem;
+                    padding-bottom: 200px;
+                    font-weight: bolder;
+                }
+            }
+        }
+    }    
+}
+
+@media screen and (max-width:$screen-md) {
+    #merchandise{
+        .cardwrapper{
+            display: block;
+            .card{
+                width: 100px;
+                height: 50px;
+                padding: 0;
+                margin-bottom: 50px;
+                .info h1{
+                    width: 150px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:$screen-xs) {
+    #merchandise{
+        .card_mobile .description{
+            .item-content{
+                font-size: .8vw;
+                span{
+                    font-size: 5vw;
+                }
+            }   
+        }
     }
 }
