--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -1,16 +1,13 @@
 
 .footer{
-    background:#9E261B;
-    height:80vh;
-    width: 100%;
-    align-items: center;
-    justify-content: flex-start;
+    height:auto;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
-    @media screen and (max-width:1120px) {
-      height: 90vh;
-    }
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 100px;
+    background:#9E261B;
 
     .decoration{
       width: 0;
@@ -20,27 +17,14 @@
     }
     
     #contact{
-      height: 70vh;
-      width: 100%;
+      height: auto;
+      max-width: 100%;
       display: flex;
-      @media screen and (max-width:1120px) {
-        flex-direction: column;
-        height: 110vh;
-      }
+      margin:60px 60px;
       .logo{
         width:20vw;
-        height:25vh;
+        height:auto;
         margin-right: 50px;
-        @media screen and (max-width:1120px) {
-          width:30vw;
-          margin-bottom: 50px;
-          margin-right: 0;
-        }
-        @media screen and (max-width:650px) {
-          width:50vw;
-          margin-bottom: 50px;
-          margin-right: 0;
-        }
       }
       .mapBox{
           position: relative;
@@ -48,13 +32,8 @@
           height: 50vh;
           background: #fff;
           iframe{
-              width: 100%;
-              height: 100%;
-          }
-          @media screen and (max-width:1120px) {
-            width: 60vw;
-            height: 60vh;
-            margin-bottom: 50px;
+            width: 100%;
+            height: 100%;
           }
       }
       .contact-box{
@@ -63,9 +42,9 @@
           display: inline-flex;
           align-items: flex-start;
           flex-direction: column;
-          .decoration4{
-              height: 1vmin;
-              width:5vw;
+          .decoration2{
+              width:20vw;
+              height: 10px;
               background-color: #ffffff;
               margin-bottom: 10px;
           }
@@ -92,4 +71,27 @@
       }
       
     }
+}
+
+@media screen and (max-width:1120px) {
+  .footer{
+    #contact{
+      flex-direction: column;
+      .logo{
+        width:50vw;
+        margin-bottom: 50px;
+        margin-right: 0;
+      }
+      .mapBox{
+        width: 60vw;
+        height: auto;
+        margin-bottom: 50px;
+      }
+    }
+  }
+}
+@media screen and (max-width:480px) {
+  .footer #contact .logo{
+    width: 80%;
+  }
 }
