--- a/src/assets/scss/Home/index.scss
+++ b/src/assets/scss/Home/index.scss
@@ -17,7 +17,8 @@ $black:#000;
 
 html{
     font-size:20px;
-    max-width: 500px;
+    max-width: 1200px;
+    -webkit-text-size-adjust:none;
 }
 
 .home{
