--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -1,9 +1,6 @@
 @import "@/assets/scss/Home/index.scss";
 
-
 #merchandise{
-    height: auto;
-    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,8 +13,6 @@
         
         .card{
             position: relative;
-            max-width: 100%;
-            height: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -139,7 +134,7 @@
     #merchandise{
         .card_mobile .description{
             .item-content{
-                font-size: .8vw;
+                font-size: 0.8rem;
                 span{
                     font-size: 5vw;
                 }
