--- a/src/assets/scss/Home/time.scss
+++ b/src/assets/scss/Home/time.scss
@@ -1,8 +1,6 @@
 @import "@/assets/scss/Home/index.scss";
 
     #time{
-        width:100%;
-        height:72vh;
         background: linear-gradient(rgba(0, 0, 0, .7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8)) ,url("../assets/picture/store.jpg");
         background-position: center;
         background-size: cover;
@@ -11,6 +9,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        
         .store-name{
             font-weight: bolder;
             font-size: 2rem;
@@ -18,7 +17,7 @@
             justify-content: center;
             color: $yellow;
             justify-content: center;
-            margin-top: 50px;
+            margin-top: 100px;
         }
         .store-subname{
             font-weight: bolder;
@@ -33,6 +32,7 @@
             display: inline-block;
             padding: 20px;
             transition: .5s;
+            margin-bottom: 60px;
             &:hover{
                 background: rgba(247,227,177,0.4);
             }
