--- a/src/assets/scss/navbar.scss
+++ b/src/assets/scss/navbar.scss
@@ -1,89 +1,83 @@
 
 header{
-    position: fixed;
-    top: 0;
-    width:100%;
-    height:80px;
+  position: fixed;
+  top: 0;
+  width:100%;
+  height:80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  transition: .7s;
+  ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10;
-    transition: .7s;
-    @media screen and (max-width:850px) {
-      display: flex;
-      justify-content: flex-end;
-    }
+    background: none;
+    li{
+      list-style: none;
+      margin-right: 20px;
+      background: none;
+      
+      a{
+        color:#F7E3B1;
+        border-radius: 20px;
+        height:50px;
+        line-height: 50px;
+        display: inline-block;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-weight:bolder;
+        padding: 0 15px;
+        letter-spacing: 1px;
+        cursor: pointer;
 
-      // .logo{
-      //   color:rgb(255, 255, 255);
-      //   font-weight: 700;
-      //   text-decoration: none;
-      //   font-size:2em;
-      //   text-transform: uppercase;
-      //   background: none;
-      //   margin-right: 200px;
-      // }
-      ul{
+        &:hover{
+            color:aliceblue;
+            background-color: #ee7748;
+        }
+      }
+      a.router-link-exact-active{
+          color:aliceblue;
+          background-color: #ee7748;
+      }
+    }
+  } 
+}
+
+@media screen and (max-width:850px) {
+  header{
+    display: flex;
+    justify-content: flex-end;
+    ul li{
+      margin: 0;
+      a{
+        font-size: 1.5rem;
         display: flex;
         justify-content: center;
-        align-items: center;
-        background: none;
-        li{
-          list-style: none;
-          margin-right: 20px;
-          background: none;
-          @media screen and (max-width:850px){
-            margin: 0;
-          }
-          a{
-              color:#F7E3B1;
-              border-radius: 20px;
-              height:50px;
-              line-height: 50px;
-              display: inline-block;
-              text-decoration: none;
-              font-size: 1.2rem;
-              font-weight:bolder;
-              padding: 0 15px;
-              letter-spacing: 1px;
-              cursor: pointer;
-              @media screen and (max-width:850px) {
-                font-size: 1.5rem;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                i{
-                  color: rgb(255, 255, 255);
-                  line-height: 0;
-                }
-                .icontext{
-                  font-size: 1px;
-                  line-height: 20px;
-                  color: rgb(255, 255, 255);
-                  margin: 0px;
-                }
-              }
-
-              &:hover{
-                  color:aliceblue;
-                  background-color: #ee7748;
-                  @media screen and (max-width:850px) {
-                    background-color: transparent;
-                    filter: invert(49%) sepia(78%) saturate(625%) hue-rotate(330deg) brightness(103%) contrast(87%);
-                  }
-              }
-            }
-          a.router-link-exact-active{
-              color:aliceblue;
-              background-color: #ee7748;
-              @media screen and (max-width:850px) {
-                background-color:transparent;
-                filter: invert(49%) sepia(78%) saturate(625%) hue-rotate(330deg) brightness(103%) contrast(87%);
-              }
-          }
+        flex-direction: column;
+        i{
+          color: rgb(255, 255, 255);
+          line-height: 0;
         }
-      } 
+        .icontext{
+          font-size: .5rem;
+          line-height: 20px;
+          color: rgb(255, 255, 255);
+          margin: 0px;
+        }
+        &:hover{
+          background-color: transparent;
+          filter: invert(49%) sepia(78%) saturate(625%) hue-rotate(330deg) brightness(103%) contrast(87%);
+        }
+        a.router-link-exact-active{
+          background-color:transparent;
+          filter: invert(49%) sepia(78%) saturate(625%) hue-rotate(330deg) brightness(103%) contrast(87%);
+        }
+      }
+    }
   }
+}
 
 .scrolled-nav{
   background: #9E261B;
