--- a/src/assets/scss/Home/time.scss
+++ b/src/assets/scss/Home/time.scss
@@ -36,7 +36,7 @@
             &:hover{
                 background: rgba(247,227,177,0.4);
             }
-            .timetable-subtitle{
+            .timetable-title{
                 font-weight: bolder;
                 font-size: 1.8rem;
                 display: flex;
