--- a/src/assets/scss/Home/index.scss
+++ b/src/assets/scss/Home/index.scss
@@ -2,109 +2,103 @@ $screen-xs: 480px;
 $screen-sm: 800px;
 $screen-md: 992px;
 $screen-lg: 1200px;
-$dark-brown:#9E261B;
-$brown:#AF3314;
-$light-orange:#F5A02A;
-$orange:#ee7748;
-$yellow:rgb(240, 241, 156);
-$gray:rgba(247,227,177,0.4);
-$blue:cornflowerblue;
-$white:#fff;
-$white2:beige;
-$black:#000;
+$dark-brown: #9e261b;
+$brown: #af3314;
+$light-orange: #f5a02a;
+$orange: #ee7748;
+$yellow: rgb(240, 241, 156);
+$gray: rgba(247, 227, 177, 0.4);
+$blue: cornflowerblue;
+$white: #fff;
+$white2: beige;
+$black: #000;
 
 // 主頁底板設計以及其他內容裝飾
 
-html{
-    font-size:20px;
-    -webkit-text-size-adjust:none;
-    
+html {
+  font-size: 20px;
+  -webkit-text-size-adjust: none;
 }
 
-.home{
-    margin: 0;
-    background: #FDF2D8;
-    width: 100%;
-    height: 100%;
-    white-space: pre-wrap;
+.home {
+  margin: 0;
+  background: #fdf2d8;
+  width: 100%;
+  height: 100%;
+  white-space: pre-wrap;
 }
 
-.home_picture{
-    height:100%;
-    width:100%;
+.home_picture {
+  height: 100%;
+  width: 100%;
 }
 
-.content-titlewrapper{
-    width: 100%;
-    height: 4vmin;
-    display: flex;
-    align-items: baseline;
-    margin-bottom: 60px;
+.content-titlewrapper {
+  width: 100%;
+  height: 4vmin;
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 60px;
 
-    .decoration{
-        height: 10px;
-        width: 15vw;
-        background-color: red;
-        margin: 0px 10px;
-    }
-    .content-title{
-        font-weight: bolder;
-        font-size: 2rem;
-        color:#F5A02A;
-    }
-}
-    
-
-.content-description{
-    margin-bottom: 50px;
-    font-size: 1.1rem;
-    font-weight: 700;
-    text-align: center;
-    max-width: 80%;
+  .decoration {
+    height: 10px;
+    width: 15vw;
+    background-color: red;
+    margin: 0px 10px;
+  }
+  .content-title {
+    font-weight: bolder;
+    font-size: 2rem;
+    color: #f5a02a;
+  }
 }
 
-.socialMedia{
-    margin-top: -60px;
-    right:280px;
-    float: right;
-    position: relative;
-    cursor: pointer;
-    opacity: 1;
-    z-index: 50;
-    width: 60px;
-    height: 60px;
-    
-}
-.socialMedia2{
-    margin-top: -60px;
-    right:180px;
-    float: right;
-    position: relative;
-    cursor: pointer;
-    opacity: 1;
-    z-index: 50;
-    width: 60px;
-    height: 60px;
-}
-.socialMedia3{
-    margin-top: -60px;
-    right:80px;
-    float: right;
-    position: relative;
-    cursor: pointer;
-    opacity: 1;
-    z-index: 50;
-    width: 60px;
-    height: 60px;
-}
-.icon{ 
-    color:$white;
-    font-size: 4rem;
-    &:hover{
-        color: pink;
-        transition: .5s all;
-    }
+.content-description {
+  margin-bottom: 50px;
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-align: center;
+  max-width: 80%;
 }
 
-
-
+.socialMedia {
+  margin-top: -60px;
+  right: 280px;
+  float: right;
+  position: relative;
+  cursor: pointer;
+  opacity: 1;
+  z-index: 50;
+  width: 60px;
+  height: 60px;
+}
+.socialMedia2 {
+  margin-top: -60px;
+  right: 180px;
+  float: right;
+  position: relative;
+  cursor: pointer;
+  opacity: 1;
+  z-index: 50;
+  width: 60px;
+  height: 60px;
+}
+.socialMedia3 {
+  margin-top: -60px;
+  right: 80px;
+  float: right;
+  position: relative;
+  cursor: pointer;
+  opacity: 1;
+  z-index: 50;
+  width: 60px;
+  height: 60px;
+}
+.icon {
+  color: $white;
+  font-size: 4rem;
+  &:hover {
+    color: pink;
+    transition: 0.5s all;
+  }
+}
