--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -1,149 +1,150 @@
 @import "@/assets/scss/Home/index.scss";
 
-#merchandise{
+#merchandise {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 60px;
+
+  .cardwrapper {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    margin-top: 60px;
-    
+    align-items: center;
 
-    .cardwrapper{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        .card{
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: auto 50px;
-            padding: 4rem 4rem;
-            background: $light-orange;
-            box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
-            transform: 0.5s ease-in-out;
-            
-            
-            &:hover{
-                transform: translateY(20px);
-            }
-            &::before{
-                content:"";
-                position: absolute;
-                top:0;
-                left:0;
-                display: block;
-                width:100%;
-                height:100%;
-                background: linear-gradient(to bottom, rgba(245,160,42,.5), rgba(254,219,142,1));
-                z-index: 2;
-                transition: .5s all;
-                opacity: 0;
-            }
-            &:hover::before{
-                opacity:1;
-            }
+    .card {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: auto 50px;
+      padding: 4rem 4rem;
+      background: $light-orange;
+      box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+      transform: 0.5s ease-in-out;
 
-            img{
-                width:100%;
-                height:100%;
-                object-fit:cover;
-                position: absolute;
-                top:0;
-                left:0;
-            }
-            .info{
-                position: relative;
-                z-index:3;
-                color:$white;
-                opacity: 0;
-                transform: translateY(30px);
-                transition: .5s all;
-                h1{
-                    margin: 0;
-                    
-                    span{
-                        font-size: 1vmax;
-                        font-weight: bolder;
-                    }
-                }
-                p{
-                    letter-spacing: 1px;
-                    font-size: 15px;
-                    margin-top: 8px;
-                    margin-bottom: 20px;
-                }
-            }
-            &:hover .info{
-                opacity: 1;
-                transform: translateY(0px);
-            }
+      &:hover {
+        transform: translateY(20px);
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          to bottom,
+          rgba(245, 160, 42, 0.5),
+          rgba(254, 219, 142, 1)
+        );
+        z-index: 2;
+        transition: 0.5s all;
+        opacity: 0;
+      }
+      &:hover::before {
+        opacity: 1;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      .info {
+        position: relative;
+        z-index: 3;
+        color: $white;
+        opacity: 0;
+        transform: translateY(30px);
+        transition: 0.5s all;
+        h1 {
+          margin: 0;
+
+          span {
+            font-size: 1vmax;
+            font-weight: bolder;
+          }
         }
+        p {
+          letter-spacing: 1px;
+          font-size: 15px;
+          margin-top: 8px;
+          margin-bottom: 20px;
+        }
+      }
+      &:hover .info {
+        opacity: 1;
+        transform: translateY(0px);
+      }
     }
-    .card_mobile{
-        width: 80%;
-        height: auto;
-        display: flex;
-        align-items: flex-start;
-        margin: 5px 20px;
-        background:$light-orange;
-        background-color:$white2;
+  }
+  .card_mobile {
+    width: 80%;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+    margin: 5px 20px;
+    background: $light-orange;
+    background-color: $white2;
 
-        img{
-            width: 32vw;
-            height: auto;
+    img {
+      width: 32vw;
+      height: auto;
+    }
+    .description {
+      position: relative;
+      width: 100%;
+      height: auto;
+      text-align: left;
+
+      .item-content {
+        font-size: 1.2rem;
+        margin: 20px;
+
+        span {
+          font-size: 1.8rem;
+          padding-bottom: 200px;
+          font-weight: bolder;
         }
-        .description{
-            position: relative;
-            width: 100%;
-            height: auto;
-            text-align: left;
-            
-            
-            .item-content{
-                font-size: 1.2rem;
-                margin: 20px;
-                
-                span{
-                    font-size: 1.8rem;
-                    padding-bottom: 200px;
-                    font-weight: bolder;
-                }
-            }
-        }
-    }    
+      }
+    }
+  }
 }
 
-@media screen and (max-width:$screen-md) {
-    #merchandise{
-        overflow-x:hidden;
-        overflow-y:hidden;
-        .cardwrapper{
-            display: block;
-            .card{
-                width: 100px;
-                height: 50px;
-                padding: 0;
-                margin-bottom: 50px;
-                .info h1{
-                    width: 150px;
-                }
-            }
+@media screen and (max-width: $screen-md) {
+  #merchandise {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    .cardwrapper {
+      display: block;
+      .card {
+        width: 100px;
+        height: 50px;
+        padding: 0;
+        margin-bottom: 50px;
+        .info h1 {
+          width: 150px;
         }
+      }
     }
+  }
 }
 
-@media screen and (max-width:$screen-xs) {
-    #merchandise{
-        overflow-x:hidden;
-        overflow-y:hidden;
-        .card_mobile .description{
-            .item-content{
-                font-size: 0.8rem;
-                span{
-                    font-size: 5vw;
-                }
-            }   
+@media screen and (max-width: $screen-xs) {
+  #merchandise {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    .card_mobile .description {
+      .item-content {
+        font-size: 0.8rem;
+        span {
+          font-size: 5vw;
         }
+      }
     }
+  }
 }
