--- a/src/assets/scss/Home/time.scss
+++ b/src/assets/scss/Home/time.scss
@@ -1,67 +1,71 @@
 @import "@/assets/scss/Home/index.scss";
 
-    #time{
-        background: linear-gradient(rgba(0, 0, 0, .7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8)) ,url("../assets/picture/store.jpg");
-        background-position: center;
-        background-size: cover;
-        z-index: max;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        
-        .store-name{
-            font-weight: bolder;
-            font-size: 2rem;
-            display: flex;
-            justify-content: center;
-            color: $yellow;
-            justify-content: center;
-            margin-top: 100px;
-        }
-        .store-subname{
-            font-weight: bolder;
-            font-size: 1rem;
-            display: flex;
-            justify-content: center;
-            color: $yellow;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .timetable{
-            display: inline-block;
-            padding: 20px;
-            transition: .5s;
-            margin-bottom: 60px;
-            &:hover{
-                background: rgba(247,227,177,0.4);
-            }
-            .timetable-title{
-                font-weight: bolder;
-                font-size: 1.8rem;
-                display: flex;
-                color: $white;
-                justify-content: center;
-                margin-bottom: 20px;
-            }
-            ul{
-                padding: 0;
-                li{
-                    list-style: none;
-                    display: flex;
-                    justify-content: center;
-                    font-size: 1.2rem;
-                    margin-bottom: 5px;
-                    color:$white;
-                    @media screen and (max-width:$screen-sm) {
-                        font-size: 1rem;
-                    }
-                    p{
-                        font-family:'Secular One';
-                        color:$white;
-                    }
-                }
-            } 
-        }
-    }
+#time {
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.7),
+      rgba(79, 76, 76, 0.5),
+      rgba(5, 5, 5, 0.8)
+    ),
+    url("../assets/picture/store.jpg");
+  background-position: center;
+  background-size: cover;
+  z-index: max;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
+  .store-name {
+    font-weight: bolder;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    color: $yellow;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  .store-subname {
+    font-weight: bolder;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    color: $yellow;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .timetable {
+    display: inline-block;
+    padding: 20px;
+    transition: 0.5s;
+    margin-bottom: 60px;
+    &:hover {
+      background: rgba(247, 227, 177, 0.4);
+    }
+    .timetable-title {
+      font-weight: bolder;
+      font-size: 1.8rem;
+      display: flex;
+      color: $white;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    ul {
+      padding: 0;
+      li {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        font-size: 1.2rem;
+        margin-bottom: 5px;
+        color: $white;
+        @media screen and (max-width: $screen-sm) {
+          font-size: 1rem;
+        }
+        p {
+          font-family: "Secular One";
+          color: $white;
+        }
+      }
+    }
+  }
+}
