--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -1,88 +1,86 @@
+.footer {
+  height: auto;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 100px;
+  background: #9e261b;
 
-.footer{
-    height:auto;
+  .decoration {
+    width: 0;
+    height: 0;
+    border: 25px solid;
+    border-color: #fdf2d8 transparent transparent transparent;
+  }
+
+  #contact {
+    height: auto;
     max-width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 100px;
-    background:#9E261B;
-
-    .decoration{
-      width: 0;
-      height: 0;
-      border: 25px solid;
-      border-color: #FDF2D8 transparent transparent transparent;
-    }
-    
-    #contact{
+    margin: 60px 60px;
+    .logo {
+      width: 20vw;
       height: auto;
-      max-width: 100%;
-      display: flex;
-      margin:60px 60px;
-      .logo{
-        width:20vw;
-        height:auto;
-        margin-right: 50px;
-      }
-      .mapBox{
-          position: relative;
-          width: 25vw;
-          height: 50vh;
-          background: #fff;
-          iframe{
-            width: 100%;
-            height: 100%;
-          }
-      }
-      .contact-box{
-          padding: 50px;
-          padding-top: 0;
-          display: inline-flex;
-          align-items: flex-start;
-          flex-direction: column;
-          .decoration2{
-              width:20vw;
-              height: 10px;
-              margin-bottom: 10px;
-              background-color: #ffffff;
-          }
-          h1{
-              font-weight: bolder;
-              margin-bottom: 20px;
-              color:#F7E3B1;
-          }
-          a{
-            text-decoration:none;
-          } 
-          .icon{
-            color:#F7E3B1;
-            font-size: 2rem;
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-            span{
-              font-style: normal;
-              font-size: 1rem;
-              margin-left: 10px;
-            }
-          }
-      }
-      
+      margin-right: 50px;
     }
+    .mapBox {
+      position: relative;
+      width: 25vw;
+      height: 50vh;
+      background: #fff;
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .contact-box {
+      padding: 50px;
+      padding-top: 0;
+      display: inline-flex;
+      align-items: flex-start;
+      flex-direction: column;
+      .decoration2 {
+        width: 20vw;
+        height: 10px;
+        margin-bottom: 10px;
+        background-color: #ffffff;
+      }
+      h1 {
+        font-weight: bolder;
+        margin-bottom: 20px;
+        color: #f7e3b1;
+      }
+      a {
+        text-decoration: none;
+      }
+      .icon {
+        color: #f7e3b1;
+        font-size: 2rem;
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+        span {
+          font-style: normal;
+          font-size: 1rem;
+          margin-left: 10px;
+        }
+      }
+    }
+  }
 }
 
-@media screen and (max-width:1120px) {
-  .footer{
-    #contact{
+@media screen and (max-width: 1120px) {
+  .footer {
+    #contact {
       flex-direction: column;
-      .logo{
-        width:50vw;
+      .logo {
+        width: 50vw;
         margin-bottom: 50px;
         margin-right: 0;
       }
-      .mapBox{
+      .mapBox {
         width: 60vw;
         height: auto;
         margin-bottom: 50px;
@@ -90,8 +88,8 @@
     }
   }
 }
-@media screen and (max-width:480px) {
-  .footer #contact .logo{
+@media screen and (max-width: 480px) {
+  .footer #contact .logo {
     width: 80%;
   }
 }
