--- a/src/assets/scss/popup.scss
+++ b/src/assets/scss/popup.scss
@@ -29,8 +29,9 @@
       }
       .icon {
         cursor: pointer;
-        color: $blue;
-        font-size: 20px;
+        filter: invert(52%) sepia(82%) saturate(2494%) hue-rotate(327deg) brightness(104%) contrast(92%);
+        width: 20px;
+        mask-size: 100% 100%;
       }
     }
 
