fix:router URL with hash, navbar renew

--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -30,7 +30,8 @@
           vertical-align: middle;
           transition: all 0.3s ease;
           &:hover {
-            transform: scale(1.1);
+            transform: scale(1.4);
+            transition: 1s;
           }
         }
       }
