--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 60px;
+  margin-bottom: 100px;
 
   :deep(.swiper-area) {
     width: 100%;
