--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -1,6 +1,7 @@
 .footer {
   height: auto;
   max-width: 100%;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
