add: photos to gallery

--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -12,7 +12,8 @@
       flex-wrap: wrap;
       .image {
         padding: 30px 10px;
-        width: calc(100% / 5);
+        width: calc(100% / 4);
+        height: auto;
         cursor: pointer;
 
         span {
