--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -49,6 +49,24 @@ $--time-background: rgba(0, 0, 0, 0.7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8
   overflow-x: hidden;
 }
 
+@mixin senction-settings($my: 100px, $mx: 100px, $py: 100px, $px: 100px) {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: $my $mx;
+  padding: $py $px;
+}
+
+@mixin background-settings($bg, $photo-as-bg: false, $bg-position: center, $bg-size: cover){
+  background: $bg;
+  @if $photo-as-bg {
+    background-position: $bg-position;
+    background-size: $bg-size;
+  }
+}
+
 .home {
   margin: 0;
   background: $--yellow-50;
@@ -60,16 +78,6 @@ $--time-background: rgba(0, 0, 0, 0.7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8
 .home_picture {
   height: 100%;
   width: 100%;
-}
-
-@mixin senction-settings($my: 100px, $mx: 100px, $py: 100px, $px: 100px) {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: $my $mx;
-  padding: $py $px;
 }
 
 .content-titleWrapper {
@@ -136,7 +144,23 @@ $--time-background: rgba(0, 0, 0, 0.7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8
 }
 
 .btn{
+  position: relative;
+  padding: 10px 15px;
+  margin-top: 15px;
   cursor: pointer;
   margin: 0 5px;
-  width: 100px;
+  background: $--orange-50;
+  display: inline-block;
+  text-transform: uppercase;
+  color: $--brown-100;
+  font-weight: bolder;
+  letter-spacing: 2px;
+  font-size: 14px;
+  border: 3px solid $--brown-100;
+}
+
+.btn-active{
+  @extend .btn;
+  color: $--black;
+  background: rgba($--orange-50, .3);
 }
