--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/earlyaccess/notosanstc.css');
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css');
+
 
 $max: 10000;
 
@@ -25,7 +34,7 @@ $--red-200: red;
 $--merchandise-animation-100: #fac960;
 $--merchandise-animation-200: rgba(245,160,42,.5);
 $--gallery-popup-bg: rgba(222,184,135,.5);
-$--icon-hover: pink;
+$--icon-hover: #ffc0cb;
 $--card-shadow-100: 0px 8px 38px rgba(0, 0, 0, 0.1);
 $--card-shadow-200: 0px 18px 38px rgba(0, 0, 0, 0.2);
 $--card-shadow-300: 0px 7px 10px rgba(0, 0, 0, 0.5);
@@ -120,8 +129,7 @@ $--time-background: rgba(0, 0, 0, 0.7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8
   float: right;
   margin-top: -60px;
   opacity: 1;
-  z-index: 50;
-  
+  z-index: 20;
 }
 
 .calling {
@@ -141,7 +149,7 @@ $--time-background: rgba(0, 0, 0, 0.7), rgba(79, 76, 76, 0.5), rgba(5, 5, 5, 0.8
 
 .icon {
   color: $--white;
-  font-size: 4rem;
+  font-size: 3.5rem;
   &:hover {
     color: $--icon-hover;
     transition: 0.5s all;
