--- a/src/assets/scss/popup.scss
+++ b/src/assets/scss/popup.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 1000px;
+  height: 100%;
   z-index: $max;
   background-color: $--gallery-popup-bg;
   
@@ -35,9 +35,8 @@
       }
       .icon {
         cursor: pointer;
-        filter: invert(52%) sepia(82%) saturate(2494%) hue-rotate(327deg) brightness(104%) contrast(92%);
-        width: 20px;
-        mask-size: 100% 100%;
+        color:$--brown-100;
+        font-size: 1rem;
       }
     }
 
