--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -6,6 +6,7 @@
   height: auto;
   max-width: 100%;
   margin-bottom: 0px;
+  padding-bottom: 50px;
   justify-content: flex-start;
 
   .decoration {
@@ -20,6 +21,7 @@
     height: auto;
     display: flex;
     margin: 60px 60px;
+    margin-bottom: 0px;
     @media screen and (max-width: 1120px) {
       flex-direction: column;
     }
@@ -69,11 +71,6 @@
         text-decoration: none;
         display: flex;
         align-items: baseline;
-        .icon {
-          color: $--yellow-50;
-          font-size: 2rem;
-          margin-bottom: 10px;
-        }
         span {
           font-style: normal;
           font-weight:bolder;
@@ -84,5 +81,10 @@
         }
       }
     }
+  }
+  .cpyr{
+    color: $--yellow-50;
+    font-size: .5rem;
+    margin: 20px 0;
   }
 }
